@@ -3,6 +3,7 @@ import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.chrome.ChromeDriver;
+import org.testng.Assert;
 import org.testng.annotations.Test;
 import org.testng.asserts.SoftAssert;
 
@@ -10,9 +11,11 @@ import java.time.Duration;
 import java.util.List;
 import java.util.stream.Collectors;
 
-public class HotelSearch {
+/* Searching for hotel without city name + assertion */
+
+public class HotelSearch_v1 {
     @Test
-    public void searchHotel() {
+    public void searchHotel_v1() {
         WebDriverManager.chromedriver().setup();
         WebDriver driver = new ChromeDriver();
 
@@ -20,11 +23,8 @@ public class HotelSearch {
         driver.manage().window().maximize();
         driver.get("http://www.kurs-selenium.pl/demo/");
 
-        driver.findElement(By.xpath("//span[text()='Search by Hotel or City Name']")).click();
-        driver.findElement(By.xpath("//div[@id='select2-drop']//input")).sendKeys("Dubai");
-        driver.findElement(By.xpath("//span[@class='select2-match' and text()='Dubai']")).click();
 
-        driver.findElement(By.name("checkin")).sendKeys("17/03/2023");
+        driver.findElement(By.name("checkin")).sendKeys("17/05/2023");
         driver.findElement(By.name("checkin")).click();
 
         driver.findElement(By.name("checkout")).click();
@@ -34,7 +34,7 @@ public class HotelSearch {
                 .findFirst()
                 .ifPresent(WebElement::click);
 
-        driver.findElements(By.xpath("//span[@class='month' and text()='Mar']"))
+        driver.findElements(By.xpath("//span[@class='month' and text()='May']"))
                 .stream()
                 .filter(WebElement::isDisplayed) //el -> el.isDisplayed()
                 .findFirst()
@@ -50,32 +50,27 @@ public class HotelSearch {
 
 
         driver.findElement(By.id("travellersInput")).click();
-        driver.findElement(By.id("adultPlusBtn")).click();
         driver.findElement(By.id("childPlusBtn")).click();
-        driver.findElement(By.id("adultMinusBtn")).click();
         driver.findElement(By.id("travellersInput")).click();
-
 
         driver.findElement(By.xpath("//button[@type='submit' and text()=' Search']")).click();
 
+/*   // first option
         List<String> hotelsList = driver.findElements(By.xpath("//h4[contains(@class,'list_title')]//b"))
                 .stream()
                 .map(el -> el.getAttribute("innerHTML"))
-                .collect(Collectors.toList());
+                .toList();
 
-
-
+        Assert.assertTrue(hotelsList.size() > 0,"No results, hotels list empty!");
         System.out.println(hotelsList.size());
-        hotelsList.forEach(System.out::println);
+*/
 
-        SoftAssert softAssert = new SoftAssert();
-        softAssert.assertEquals(hotelsList.get(0),"Jumeirah Beach Hotel","Failed to find");
-        softAssert.assertEquals(hotelsList.get(1),"Oasis Beach Tower","Failed to find");
-        softAssert.assertEquals(hotelsList.get(2),"Rose Rayhaan Rotana","Failed to find");
-        softAssert.assertEquals(hotelsList.get(3),"Hyatt Regency Perth","Failed to find");
+        // second option
 
-
+        WebElement noResultHeading = driver.findElement(By.xpath("//div[@class='itemscontainer']//h2"));
+        Assert.assertTrue(noResultHeading.isDisplayed());
+        Assert.assertEquals(noResultHeading.getText(),"No Results Found");
         driver.quit();
-        softAssert.assertAll();
+
     }
 }
